--- a/src/styles/LeftPanel.scss
+++ b/src/styles/LeftPanel.scss
@@ -24,7 +24,7 @@
 
 .search-input{
     padding: 16px;
-    font-size: 1em !important;
+    font-size: 0.82em !important;
     width: 100%;
     height: $searchHeight;
     // border-bottom: 3px solid $borderCol;
